Preventing zooming on iOS

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+html,
+body {
+  touch-action: pan-y;
+  -webkit-touch-callout: none;
+  -webkit-text-size-adjust: none;
+  -webkit-user-select: none;
+  user-select: none;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -12,6 +21,7 @@ body {
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
 }
 
 code {
